# stochy

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_MORE.md
src/: common.rs  lib.rs  rspsa.rs  rspsa_argmin.rs  spsa.rs  spsa_argmin.rs
tests/: argmin.rs  convergence.rs  examples_in_readme.rs  with_noise.rs
