[package]
name = "stochy"
version = "0.0.2"
edition = "2021"
authors = ["andy watkins <andy@webcalculator.com>"]
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "A numeric library of stochastic approximation algorithms"
repository = "https://github.com/akanalytics/stochy"
homepage = "https://github.com/akanalytics/stochy"
readme = "README.md"
keywords = ["solver", "optimization", "stochastic", "SPSA", "RSPSA"]
categories = ["mathematics", "algorithms"]
publish = true


[dependencies]
stepwise = { path = "../stepwise", version = "0.0.2" }
rand = "0.9.0"
argmin = { version = "0.10.0", optional= true}

[dev-dependencies]
rand_core = "0.9.3"
env_logger = "0.11.7"
log = { version = "0.4", features = ["release_max_level_debug"] }
test-log = { version = "0.2.17", features = ["trace"] }
rand_pcg = "0.9.0"
anyhow = "1.0.98"


[features]
default = []

[package.metadata.docs.rs]
features = ["argmin"]
rustdoc-args = ["--cfg", "docsrs"]


[lints]

